// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentComponent should not render if view model is null 1`] = `
<div
  id="root0"
  ngx-d3timeline-content=""
>
  
</div>
`;

exports[`ContentComponent when Horizontal should render correctly 1`] = `
<div
  id="root2"
  ngx-d3timeline-content=""
>
  
  <g
    class="content-group"
  >
    
    <g
      transform="translate(0, 316.3265933255485)"
    >
      <rect
        fill="none"
        height="33.673406674451485"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(0, 0)"
    >
      <rect
        fill="none"
        height="49.78182041669228"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(0, 49.78182041669228)"
    >
      <rect
        fill="none"
        height="8.296970069448712"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        DriveBreak
      </text>
    </g>
    <g
      transform="translate(83.33333333333333, 64.65183455227091)"
    >
      <rect
        fill="none"
        height="1.5702784094401068"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(83.33333333333333, 56.3548644828222)"
    >
      <rect
        fill="none"
        height="0.23354434269558766"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Waiting
      </text>
    </g>
    <g
      transform="translate(83.33333333333333, 106.13668489951448)"
    >
      <rect
        fill="none"
        height="12.43623624854034"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(166.66666666666666, 316.3265933255485)"
    >
      <rect
        fill="none"
        height="33.673406674451485"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(166.66666666666666, 0)"
    >
      <rect
        fill="none"
        height="49.78182041669228"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(166.66666666666666, 49.78182041669228)"
    >
      <rect
        fill="none"
        height="8.296970069448712"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        DriveBreak
      </text>
    </g>
  </g>
</div>
`;

exports[`ContentComponent when Vertical should render correctly 1`] = `
<div
  id="root1"
  ngx-d3timeline-content=""
>
  
  <g
    class="content-group"
  >
    
    <g
      transform="translate(0, 316.3265933255485)"
    >
      <rect
        fill="none"
        height="33.673406674451485"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(0, 0)"
    >
      <rect
        fill="none"
        height="49.78182041669228"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(0, 49.78182041669228)"
    >
      <rect
        fill="none"
        height="8.296970069448712"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        DriveBreak
      </text>
    </g>
    <g
      transform="translate(83.33333333333333, 64.65183455227091)"
    >
      <rect
        fill="none"
        height="1.5702784094401068"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(83.33333333333333, 56.3548644828222)"
    >
      <rect
        fill="none"
        height="0.23354434269558766"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Waiting
      </text>
    </g>
    <g
      transform="translate(83.33333333333333, 106.13668489951448)"
    >
      <rect
        fill="none"
        height="12.43623624854034"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(166.66666666666666, 316.3265933255485)"
    >
      <rect
        fill="none"
        height="33.673406674451485"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(166.66666666666666, 0)"
    >
      <rect
        fill="none"
        height="49.78182041669228"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        Driving
      </text>
    </g>
    <g
      transform="translate(166.66666666666666, 49.78182041669228)"
    >
      <rect
        fill="none"
        height="8.296970069448712"
        stroke="#000"
        width="83.33333333333333"
      />
      <text
        dy="1em"
        font-size="10px"
      >
        DriveBreak
      </text>
    </g>
  </g>
</div>
`;
